bunny fruit game

--- a/index.html
+++ b/index.html
@@ -3,9 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blueberry Bunny</title>
+    <title>Blueberry Bunny Sort</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>What a yummy blueberry bunny!
+    <div class="app">
+        <header class="hero">
+            <h1>Blueberry Bunny Sort</h1>
+            <p>Drag and drop the fruit bunny stacks into their matching flavor tubes. Keep a special eye on the delicious blueberry bunny family!</p>
+        </header>
+        <main class="game">
+            <section class="hud" aria-label="Game controls">
+                <button id="new-game" type="button" class="button button--primary">New round</button>
+                <div class="hud__stat" aria-live="polite">
+                    <span class="hud__label">Moves</span>
+                    <strong class="hud__value" id="move-count">0</strong>
+                </div>
+                <div class="hud__stat">
+                    <span class="hud__label">Tubes</span>
+                    <strong class="hud__value" id="tube-count">0</strong>
+                </div>
+            </section>
+            <section class="board" id="board" aria-label="Fruit bunny tubes" aria-live="polite">
+                <!-- Tubes are rendered dynamically -->
+            </section>
+            <section class="info" aria-label="How to play">
+                <h2>How to play</h2>
+                <ol>
+                    <li>Drag the top stack of matching fruit bunnies from one tube to another.</li>
+                    <li>Drop them onto the same fruit type or into an empty tube—there has to be enough space.</li>
+                    <li>Line up each tube with a single fruit family to win. Prefer keys? Focus a tube and press Enter/Space to pick up or drop.</li>
+                </ol>
+            </section>
+        </main>
+    </div>
+
+    <dialog id="win-modal" class="win-modal" aria-labelledby="win-title" aria-modal="true">
+        <div class="win-modal__body">
+            <h2 id="win-title">You did it!</h2>
+            <p>The fruit bunnies are perfectly sorted. Blueberry hugs all around!</p>
+            <button type="button" class="button button--primary" id="play-again">Play again</button>
+        </div>
+    </dialog>
+
+    <template id="tube-template">
+        <article class="tube" role="button" aria-pressed="false" tabindex="0" data-index="">
+            <div class="bunny-stack" aria-hidden="true"></div>
+            <span class="sr-only">Empty tube</span>
+        </article>
+    </template>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
