--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>How to play</h2>
                 <ol>
                     <li>Drag the top stack of matching fruit bunnies from one tube to another.</li>
-                    <li>Drop them onto the same fruit type or into an empty tube—there has to be enough space.</li>
+                    <li>Drop them into any tube that has enough room for the whole stack. Mixing flavors is totally fine.</li>
                     <li>Line up each tube with a single fruit family to win. Prefer keys? Focus a tube and press Enter/Space to pick up or drop.</li>
                 </ol>
             </section>
