--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
     <div class="app">
         <header class="hero">
             <h1>Blueberry Bunny Sort</h1>
-            <p>Drag and drop the fruit bunny stacks into their matching flavor tubes. Keep a special eye on the delicious blueberry bunny family!</p>
+            <p>Guide the blueberry bunch and their fruit friends through a whole stack of levels—each one adds more tubes, more bunnies, and more delicious chaos to tame.</p>
         </header>
         <main class="game">
             <section class="hud" aria-label="Game controls">
-                <button id="new-game" type="button" class="button button--primary">New round</button>
+                <button id="new-game" type="button" class="button button--primary">Restart level</button>
+                <div class="hud__stat hud__stat--level" aria-live="polite">
+                    <span class="hud__label">Level</span>
+                    <div class="hud__level">
+                        <strong class="hud__value" id="level-number">1</strong>
+                        <span class="hud__divider" aria-hidden="true">/</span>
+                        <span class="hud__value hud__value--secondary" id="level-total">6</span>
+                    </div>
+                    <span class="hud__note" id="level-name">Berry Beginnings</span>
+                </div>
                 <div class="hud__stat" aria-live="polite">
                     <span class="hud__label">Moves</span>
                     <strong class="hud__value" id="move-count">0</strong>
@@ -34,8 +43,8 @@
                 <h2>How to play</h2>
                 <ol>
                     <li>Drag the top stack of matching fruit bunnies from one tube to another.</li>
-                    <li>Drop them into any tube that has enough room for the whole stack. Mixing flavors is totally fine.</li>
-                    <li>Line up each tube with a single fruit family to win. Prefer keys? Focus a tube and press Enter/Space to pick up or drop.</li>
+                    <li>Drop them into any tube that has enough room for the whole stack—mixing flavors is totally fine.</li>
+                    <li>Line up each tube with a single fruit family to win. New levels add more fruits and helper tubes. Prefer keys? Focus a tube and press Enter/Space to pick up or drop.</li>
                 </ol>
             </section>
         </main>
@@ -44,8 +53,8 @@
     <dialog id="win-modal" class="win-modal" aria-labelledby="win-title" aria-modal="true">
         <div class="win-modal__body">
             <h2 id="win-title">You did it!</h2>
-            <p>The fruit bunnies are perfectly sorted. Blueberry hugs all around!</p>
-            <button type="button" class="button button--primary" id="play-again">Play again</button>
+            <p class="win-modal__message">The fruit bunnies are perfectly sorted. Blueberry hugs all around!</p>
+            <button type="button" class="button button--primary" id="play-again">Next level</button>
         </div>
     </dialog>
 
