--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="app">
         <header class="hero">
             <h1>Blueberry Bunny Sort</h1>
-            <p>Guide the blueberry bunch and their fruit friends through a whole stack of levels—each one adds more tubes, more bunnies, and more delicious chaos to tame.</p>
+            <p>Guide the blueberry bunch and their fruit friends through ten escalating levels—each one adds more tubes, more bunnies, and more delicious chaos to tame.</p>
         </header>
         <main class="game">
             <section class="hud" aria-label="Game controls">
@@ -23,7 +23,7 @@
                     <div class="hud__level">
                         <strong class="hud__value" id="level-number">1</strong>
                         <span class="hud__divider" aria-hidden="true">/</span>
-                        <span class="hud__value hud__value--secondary" id="level-total">6</span>
+                        <span class="hud__value hud__value--secondary" id="level-total">10</span>
                     </div>
                     <span class="hud__note" id="level-name">Berry Beginnings</span>
                 </div>
